first part of code change to get CW run on my Blackberry